--- a/less/style.less
+++ b/less/style.less
@@ -10,20 +10,37 @@
 
 
 body {
- margin: 0;
+	margin: 0;
 }
 
 header {
+	padding: @padding+30 0 0 @padding+10;
+	color: @template-color;
 
 	.container {
     
 		h1 {
-			
+			.column(6);
 		}
 
 		nav {
+			.column(6);
 
-		}	
+			ul {
+				padding-left: 0;
+				li {
+					display: inline-block;
+					margin: 0 @margin+20;
+					font-size: @fontSize*1.5;
+
+					&:first-child {
+						margin-left: 0;
+					}
+				}
+			}
+		}
+	}
+	.clearfix();
 }
 
 
@@ -31,23 +48,26 @@ header {
 	
 	.container {
 
-    aside{
-		//.right;	
+		aside {
+			.right;
+			.column(6);
 		}
 
 		article {
-
+			.column(6);
 		}
 	}
+	.clearfix();
 }
 
 
 footer {
     
 	.container {
-	 
-	  ul {
-	        
-		 }
-	 }
+	.push(2);
+
+		ul {
+			.column(3);
+		}
+	}
 }
